--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  width: 30rem;
+  width: 40rem;
   padding: 3rem;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -24,11 +24,14 @@ h1 {
 
 textarea {
   width: 100%;
+  height: 15rem;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   resize: vertical;
+  font-size: 1rem;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 button {
