--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
+  background-image: linear-gradient(to right, #fbc2eb, #a6c1ee);
   margin: 0;
   padding: 0;
   display: flex;
@@ -97,4 +97,28 @@ tr:hover td {
 h2 {
   color: #3498db;
   margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1000px) {
+  .container {
+    width: 30rem;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    width: 90%;
+  }
 }
